# middleware/auth.js
@@ -65,7 +65,21 @@ const authorizeRoles = (...roles) => {
   };
 };
 
+const authMiddleware = (req, res, next) => {
+  const token = req.header("Authorization")?.split(" ")[1];
+  if (!token) return res.status(401).json({ message: "Access Denied." });
+
+  try {
+    const verified = jwt.verify(token, process.env.JWT_SECRET);
+    req.user = verified;
+    next();
+  } catch (error) {
+    res.status(400).json({ message: "Invalid Token." });
+  }
+};
+
 module.exports = {
+  authMiddleware,
   authenticateToken,
   authorizeRole,
   authorizeRoles,
